--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@reduxjs/toolkit": "^2.2.6",
     "react": "^18.2.0",
     "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.4.0",
