--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.4.0",
+    "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
