--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,3 +41,9 @@ newArchEnabled=false
 hermesEnabled=true
 
 android.ndkVersion=27.0.11902837
+
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=suli2004
+MYAPP_RELEASE_KEY_PASSWORD=suli2004
+
