--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.4.0",
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2"
