--- a/ios/AlphaCargo/Info.plist
+++ b/ios/AlphaCargo/Info.plist
@@ -48,5 +48,19 @@
 	<false/>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>AppIcon</string> <!-- Указываем имя набора иконок, должно быть 'AppIcon' -->
+			</array>
+			<key>UIPrerenderedIcon</key>
+			<false/>
+		</dict>
+	</dict>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 </dict>
 </plist>
