--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
@@ -20,6 +21,7 @@
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.18.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
