--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@reduxjs/toolkit": "^2.2.6",
     "punycode": "^2.3.1",
     "react": "^18.2.0",
+    "react-hook-form": "^7.54.1",
     "react-native": "0.74.3",
+    "react-native-bootsplash": "^6.3.2",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "^1.18.0",
+    "react-native-maps": "^1.20.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
