--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,3 @@
-# Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
     "react-native/scripts/react_native_pods.rb",
@@ -23,18 +22,26 @@ target 'AlphaCargo' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'AlphaCargoTests' do
-    inherit! :complete
-    # Pods for testing
+  pre_install do |installer|
+    # Add Mapbox-specific pre-install hook
+    $RNMapboxMaps.pre_install(installer)
   end
 
   post_install do |installer|
-    # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
+    # Add Mapbox-specific post-install hook
+    $RNMapboxMaps.post_install(installer)
+
+    # Existing React Native post-install hook
     react_native_post_install(
       installer,
       config[:reactNativePath],
       :mac_catalyst_enabled => false,
       # :ccache_enabled => true
     )
+  end
+
+  target 'AlphaCargoTests' do
+    inherit! :complete
+    # Pods for testing
   end
 end
