--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "@rnmapbox/maps": "^10.1.33",
     "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-hook-form": "^7.54.1",
