--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.54.1",
     "react-native": "0.74.3",
     "react-native-bootsplash": "^6.3.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.20.1",
@@ -28,6 +29,7 @@
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-share": "^12.0.3",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.4.0",
     "react-native-toast-message": "^2.2.0",
