--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-hook-form": "^7.54.1",
     "react-native": "0.74.3",
     "react-native-bootsplash": "^6.3.2",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
