misc changes and bump version to 1.2.0 + 8 for IOS

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,25 +18,20 @@ target 'AlphaCargo' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
   pre_install do |installer|
-    # Add Mapbox-specific pre-install hook
-    $RNMapboxMaps.pre_install(installer)
+    $RNMapboxMaps.pre_install(installer) if defined?($RNMapboxMaps)
   end
 
   post_install do |installer|
-    # Add Mapbox-specific post-install hook
-    $RNMapboxMaps.post_install(installer)
-
-    # Existing React Native post-install hook
+    $RNMapboxMaps.post_install(installer) if defined?($RNMapboxMaps)
+    
     react_native_post_install(
       installer,
       config[:reactNativePath],
-      :mac_catalyst_enabled => false,
-      # :ccache_enabled => true
+      :mac_catalyst_enabled => false
     )
   end
 
