--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AlphaCargo",
+  "name": "alphacargo",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -29,6 +29,7 @@
     "react-native-maps": "^1.20.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-rename": "^3.2.16",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-share": "^12.0.3",
