--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-share": "^12.0.3",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.4.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.2"
   },
