--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-native-document-picker": "^9.3.1",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.20.1",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-permissions": "^5.2.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-rename": "^3.2.16",
     "react-native-safe-area-context": "^4.10.8",
