--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,9 +74,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.alpha.cargo"
+    namespace "com.alphacargo.alphacargo"
     defaultConfig {
-        applicationId "com.alpha.cargo"
+        applicationId "com.alphacargo.alphacargo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 3
