--- a/package.json
+++ b/package.json
@@ -16,20 +16,24 @@
     "@react-navigation/native-stack": "^6.10.0",
     "@reduxjs/toolkit": "^2.2.6",
     "@rnmapbox/maps": "^10.1.33",
+    "base-64": "^1.0.0",
     "punycode": "^2.3.1",
     "react": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-native": "0.74.3",
+    "react-native-blob-util": "^0.21.2",
     "react-native-bootsplash": "^6.3.2",
     "react-native-document-picker": "^9.3.1",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.20.1",
     "react-native-maps-directions": "^1.9.0",
-    "react-native-permissions": "^5.2.5",
+    "react-native-pdf": "^6.7.7",
+    "react-native-permissions": "^5.2.6",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-rename": "^3.2.16",
     "react-native-safe-area-context": "^4.10.8",
@@ -49,7 +53,9 @@
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
+    "@types/base-64": "^1.0.2",
     "@types/react": "^18.2.6",
+    "@types/react-native-html-to-pdf": "^0.8.3",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
