--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-pdf": "^6.7.7",
     "react-native-permissions": "^5.2.6",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-phone-verification": "^0.0.1",
     "react-native-rename": "^3.2.16",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
