--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-svg": "^15.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-webview": "^13.13.5",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
