--- a/ios/AlphaCargo/Info.plist
+++ b/ios/AlphaCargo/Info.plist
@@ -1,95 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
-	<key>CFBundleDisplayName</key>
-	<string>Alpha Cargo</string>
-	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIconName</key>
-	<string>AppIcon</string>
-	<key>CFBundleIcons</key>
 	<dict>
-		<key>CFBundlePrimaryIcon</key>
+		<key>NSFaceIDUsageDescription</key>
+		<string>Мы используем Face ID для входа в приложение</string>
+		<key>CFBundleDevelopmentRegion</key>
+		<string>en</string>
+		<key>CFBundleDisplayName</key>
+		<string>Alpha Cargo</string>
+		<key>CFBundleExecutable</key>
+		<string>$(EXECUTABLE_NAME)</string>
+		<key>CFBundleIconName</key>
+		<string>AppIcon</string>
+		<key>CFBundleIcons</key>
 		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>AppIcon</string>
-			</array>
-			<key>UIPrerenderedIcon</key>
-			<false/>
+			<key>CFBundlePrimaryIcon</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>AppIcon</string>
+				</array>
+				<key>UIPrerenderedIcon</key>
+				<false />
+			</dict>
 		</dict>
+		<key>CFBundleIdentifier</key>
+		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+		<key>CFBundleInfoDictionaryVersion</key>
+		<string>6.0</string>
+		<key>CFBundleName</key>
+		<string>Alpha Cargo</string>
+		<key>CFBundlePackageType</key>
+		<string>APPL</string>
+		<key>CFBundleShortVersionString</key>
+		<string>$(MARKETING_VERSION)</string>
+		<key>CFBundleSignature</key>
+		<string>????</string>
+		<key>CFBundleVersion</key>
+		<string>$(CURRENT_PROJECT_VERSION)</string>
+		<key>LSRequiresIPhoneOS</key>
+		<true />
+		<key>NSAppTransportSecurity</key>
+		<dict>
+			<key>NSAllowsArbitraryLoads</key>
+			<false />
+			<key>NSAllowsLocalNetworking</key>
+			<true />
+		</dict>
+		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+		<string>Мы используем ваше местоположение для навигации</string>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>Мы используем ваше местоположение, пока приложение активно</string>
+		<key>UIAppFonts</key>
+		<array>
+			<string>Futura-CondensedLight.otf</string>
+			<string>Futura Bold Italic font.ttf</string>
+			<string>Futura Bold font.ttf</string>
+			<string>Futura Book Italic font.ttf</string>
+			<string>Futura Book font.ttf</string>
+			<string>Futura Extra Black font.ttf</string>
+			<string>Futura Heavy Italic font.ttf</string>
+			<string>Futura Heavy font.ttf</string>
+			<string>Futura Light Italic font.ttf</string>
+			<string>Futura Light font.ttf</string>
+			<string>Futura Medium Italic font.ttf</string>
+			<string>Futura XBlk BT.ttf</string>
+			<string>futur.ttf</string>
+			<string>futura light bt.ttf</string>
+			<string>futura medium bt.ttf</string>
+			<string>futura medium condensed bt.ttf</string>
+			<string>tt0205m_.ttf</string>
+			<string>unicode.futurab.ttf</string>
+			<string>unicode.futurabb.ttf</string>
+			<string>Exo 2 400.ttf</string>
+			<string>Exo 2 Bold 700.ttf</string>
+			<string>Exo 2 Medium 500.ttf</string>
+			<string>Exo 2 Semi Bold 600.ttf</string>
+		</array>
+		<key>UILaunchStoryboardName</key>
+		<string>LaunchScreen</string>
+		<key>UIRequiredDeviceCapabilities</key>
+		<array>
+			<string>arm64</string>
+		</array>
+		<key>UIStatusBarHidden</key>
+		<true />
+		<key>UISupportedInterfaceOrientations</key>
+		<array>
+			<string>UIInterfaceOrientationPortrait</string>
+			<string>UIInterfaceOrientationLandscapeLeft</string>
+			<string>UIInterfaceOrientationLandscapeRight</string>
+		</array>
+		<key>UIViewControllerBasedStatusBarAppearance</key>
+		<false />
 	</dict>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>Alpha Cargo</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>$(MARKETING_VERSION)</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<false/>
-		<key>NSAllowsLocalNetworking</key>
-		<true/>
-	</dict>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Мы используем ваше местоположение для навигации</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Мы используем ваше местоположение, пока приложение активно</string>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Futura-CondensedLight.otf</string>
-		<string>Futura Bold Italic font.ttf</string>
-		<string>Futura Bold font.ttf</string>
-		<string>Futura Book Italic font.ttf</string>
-		<string>Futura Book font.ttf</string>
-		<string>Futura Extra Black font.ttf</string>
-		<string>Futura Heavy Italic font.ttf</string>
-		<string>Futura Heavy font.ttf</string>
-		<string>Futura Light Italic font.ttf</string>
-		<string>Futura Light font.ttf</string>
-		<string>Futura Medium Italic font.ttf</string>
-		<string>Futura XBlk BT.ttf</string>
-		<string>futur.ttf</string>
-		<string>futura light bt.ttf</string>
-		<string>futura medium bt.ttf</string>
-		<string>futura medium condensed bt.ttf</string>
-		<string>tt0205m_.ttf</string>
-		<string>unicode.futurab.ttf</string>
-		<string>unicode.futurabb.ttf</string>
-		<string>Exo 2 400.ttf</string>
-		<string>Exo 2 Bold 700.ttf</string>
-		<string>Exo 2 Medium 500.ttf</string>
-		<string>Exo 2 Semi Bold 600.ttf</string>
-	</array>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>arm64</string>
-	</array>
-	<key>UIStatusBarHidden</key>
-	<true/>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
-</dict>
 </plist>
