--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-native": "0.74.3",
+    "react-native-biometrics": "^3.0.1",
     "react-native-blob-util": "^0.21.2",
     "react-native-bootsplash": "^6.3.2",
     "react-native-document-picker": "^9.3.1",
