--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,4 +18,23 @@ buildscript {
     }
 }
 
+// Добавление репозиториев для всех проектов
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                username = "mapbox"
+                password = project.hasProperty('MAPBOX_DOWNLOADS_TOKEN') ? project.property('MAPBOX_DOWNLOADS_TOKEN') : System.getenv('MAPBOX_DOWNLOADS_TOKEN')
+            }
+        }
+        maven { url "https://www.jitpack.io" }
+    }
+}
+
 apply plugin: "com.facebook.react.rootproject"
